[package]
edition = "2021"
name = "pdf-extract-text"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2", features = ["tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
pdf-extract = "0.9.0"

text-splitter = { version = "*", features = ["code", "markdown", "tiktoken-rs", "tokenizers"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
